Endpunkt added
Märkte werden nicht mehr neu generiert oder nicht richtig geholt
