# Server/cookie-server/internal/server/oas_response_encoders_gen.go
@@ -77,6 +77,20 @@ func encodeSellPostResponse(response *User, w http.ResponseWriter, span trace.Sp
 	return nil
 }
 
+func encodeUpdateUserIdGetResponse(response *UserMarketData, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeUsersGetResponse(response []User, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
